[package]
name = "usnet_sockets"
version = "0.1.0"
authors = ["Kai Lüke <kailueke@riseup.net>"]
license = "MIT"

[dependencies]
smoltcp = { git = "https://github.com/m-labs/smoltcp" }
usnet_devices = { git = "https://github.com/ANLAB-KAIST/usnet_devices" }
usnetd = { git = "https://github.com/ANLAB-KAIST/usnetd" }
log = { version = "0.4.0", features = ["release_max_level_debug"] }
rand = "0.4.2"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"
nix = "0.11.0"
lazy_static = "1.1.0"
libc = "*"
parking_lot = "0.6"

[features]
default = ["multi"]

multi = []
single = []
host = []
